--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@ main {
   .container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     width: 90vw;
   }
 }
@@ -84,6 +85,7 @@ main {
   background: #fff;
   transform: translateY(101%);
   transition: transform 0.3s ease-out;
+  overflow-y: auto;
 }
 
 .movie:hover .overview {
